--- a/code/styles.css
+++ b/code/styles.css
@@ -3,6 +3,11 @@
     --size-10px:.75rem;
 }
 
+body {
+    margin: 0;
+    padding: 0;
+}
+
 .for-back {
     background-image: url(../backgrounds/background-top.svg);
 }
@@ -208,7 +213,7 @@ nav {
     color: grey;
 }
 
-.card h3, p, a { margin: 0 15px;}
+.card h3, .card p, .card a { margin: 0 15px;}
 
 .card img {
     margin: 0 15px;
@@ -218,7 +223,7 @@ nav {
 
 .card h3 { font-size: 28px;}
 
-.card p, a { font-size: 23px;}
+.card p, .card a { font-size: 23px;}
 
 .card p { 
     color: grey;
@@ -289,6 +294,364 @@ nav {
     width: 55%;
 }
 
+.why-front {
+    margin-bottom: 100px;
+}
+
 .why-text {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     text-align: center;
+    margin-bottom: 100px;
+}
+
+.why-text h2 { font-size: 30px; }
+.why-text p {
+    color: grey;
+    font-size: 20px;
+    width: 655px;
+}
+
+.display {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 20px;
+    margin-bottom: 100px;
+}
+
+.circle {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-size: 30px;
+    color: rgba(0,102,255,255);
+	height: 60px;
+	min-width: 60px;
+	border-radius: 60%;
+	background-color: rgba(236,242,255,255);
+}
+
+.line {
+	height: 2px;
+	width: 200px;
+	background-color: rgba(244,245,249,255);
+}
+
+.why-front img {
+    max-width: fill-available;
+    max-width: -webkit-fill-available;
+    max-width: -moz-available;
+    margin: 0 40px;
+}
+
+.play-icon i {
+    font-size: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    z-index: 5;
+    left: 50vw;
+    top: 22vw;
+    height: 70px;
+    width: 70px;
+    border-radius: 60%;
+    background-color: white;
+    box-shadow: 0px 0px 9px 2px grey;
+}
+
+.play-icon i::before {
+    position: relative;
+    left: 3px;
+}
+
+.portrait {
+    max-width: 400px;
+}
+
+.portrait img:first-of-type {
+    max-width: inherit;
+    margin-left: 43px;
+}
+
+.hubspot {
+    display: flex;
+    margin: 0 40px;
+    justify-content: space-between;
+    gap: 87px;
+    height: 660px;
+}
+
+.portrait {
+    max-width: 480px;
+    height: 660px;
+}
+
+.portrait img:first-of-type {
+    max-width: inherit;
+    margin-left: 70px;
+}
+
+.portrait img:nth-of-type(2) {
+    width: 300px;
+    height: 495px;
+    position: relative;
+    bottom: 445px;
+    z-index: -1;
+}
+
+.hubtext {
+    width: 51%;
+    position: relative;
+    top: 100px;
+}
+
+.hubtext img {
+    width: 150px;
+}
+
+.hubtext p {
+    font-size: 35px;
+    margin-bottom: 80px;
+}
+
+.hubtext h3 {
+    font-size: 30px;
+    margin-bottom: 10px;
+}
+
+.hubtext h4 {
+    font-size: 20px;
+    color: grey;
+    margin: 0;
+}
+
+.brands {
+    margin-bottom: 100px;
+}
+
+.brands h2 {
+    font-size: 28px;
+    text-align: center;
+    color: grey;
+    margin-bottom: 70px;
+}
+
+.brandnames {
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+}
+
+.brandnames img {
+    width: 180px;
+}
+
+.pricing {
+    margin: 0 40px;
+}
+
+.pricetext {
+    text-align: center;
+    margin-bottom: 100px;
+}
+
+.pricetext h2 {
+    font-size: 40px;
+}
+
+.pricetext p {
+    font-size: 25px;
+    color: grey;
+}
+
+.pricecards {
+    display: flex;
+    justify-content: space-between;
+}
+
+.cardcontainer {
+    margin: 80px;
+}
+
+.cardTop {
+    margin-bottom: 60px;
+}
+
+.cardTop h2 {
+    font-size: 80px;
+    font-weight: initial;
+    margin-bottom: 40px;
+}
+
+.cardTop h2 span {
+    font-size: 40px;
+}
+
+.cardTop p {
+    width: 450px;
+    font-size: 27px;
+    color: grey;
+}
+
+.priceButton button {
+    background-color: #0c6bff;
+    color: white;
+    border: none;
+    border-radius: 50px;
+    height: 65px;
+    width: 180px;
+    font-size: 18px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 12px;
+}
+
+.priceButton p {
+    font-size: 20px;
+    color: grey;
+}
+
+.pricegrid {
+    display: grid;
+    grid-template-columns: repeat(2, 365px);
+    grid-template-rows: repeat(2, 1fr);
+    column-gap: 100px;
+    row-gap: 50px;
+}
+
+.pricegrid img {
+    height: 70px;
+}
+
+.griditem h2 {
+    font-size: 30px;
+}
+
+.griditem p {
+    color: grey;
+    font-size: 24px;
+}
+
+.people img {
+    width: 70px;
+    height: 70px;
+}
+
+.hf {
+    background-color: rgba(32, 51, 91, 255);
+    display: flex;
+    margin: 0 40px;
+    justify-content: center;
+    align-items: center;
+}
+
+.hireus {
+    margin: 60px;
+}
+
+.toptext  h2 {
+color: white;
+font-size: 40px;
+margin: 0;
+}
+
+.toptext p {
+    margin-bottom: 30px;
+    color: #54657c;
+    font-size: 25px;
+}
+
+.quote {
+    font-size: 23px;
+    color: white;
+    width: 469px;
+    margin-bottom: 70px;
+}
+
+/* FIX HR WIDTH */
+
+.title h3 {
+    font-size: 28px;
+    color: white;
+    margin-bottom: 0;
+}
+
+.title h4 {
+    margin-top: 8px;
+    font-weight: initial;
+    font-size: 21px;
+    color: #54657c;
+}
+
+.people { 
+    display: flex;
+    align-items: center;
+}
+
+.people img:first-of-type {
+    border-radius: 35px;
+}
+.people img:nth-of-type(2) {
+    margin: 0 50px;
+    border-radius: 35px;
+}
+.people img:nth-of-type(3) {
+    border-radius: 45px;
+    height: 80px;
+    width: 80px;
+}
+
+form {
+    display: grid;
+    grid-template-columns: repeat(2, 300px);
+    grid-template-rows: repeat(8, 70px);
+    gap: 30px;
+    background-color: white;
+    border-radius: 20px;
+    padding: 30px;
+    margin: 60px;
+}
+
+form h3 {
+    grid-column: 1 / span 2;
+    font-size: 24px;
+}
+
+form input {
+    border-radius: 5px;
+}
+
+form textarea {
+    grid-column: 1 / span 2; 
+}
+
+.checkbox {
+    grid-column: 1 / span 2;
+}
+
+input#myCheckbox {
+    transform: scale(2.5);
+    margin-right: 20px;
+    color: rgba(137, 137, 137, 255);
+}
+
+.checkbox label {
+    font-size: 20px;
+    color: rgba(137, 137, 137, 255);
+}
+
+.privf, .privs { justify-self: center; }
+
+form button {
+    width: 200px;
+    grid-column: 1 / span 2;
+    justify-self: center;
+    border-radius: 35px;
+    background-color: rgba(36, 118, 254, 255);
+    color: white;
+    font-size: 17px;
 }
