--- a/code/styles.css
+++ b/code/styles.css
@@ -547,6 +547,7 @@ nav {
     margin: 0 40px;
     justify-content: center;
     align-items: center;
+    margin-bottom: 100px;
 }
 
 .hireus {
@@ -621,7 +622,7 @@ form h3 {
     font-size: 24px;
 }
 
-form input {
+form input, select, textarea {
     border-radius: 5px;
 }
 
@@ -631,20 +632,40 @@ form textarea {
 
 .checkbox {
     grid-column: 1 / span 2;
+    display: flex;
+    align-items: center;
 }
 
 input#myCheckbox {
-    transform: scale(2.5);
-    margin-right: 20px;
+    transform: scale(3);
+    margin-left: 17px;
     color: rgba(137, 137, 137, 255);
 }
 
-.checkbox label {
+.checkbox h4 {
+    color: grey;
+    font-size: 19px;
+    padding-left: 40px;
+    padding-right: 60px;
+}
+
+.privf, .privs { 
+    justify-self: center; 
     font-size: 20px;
     color: rgba(137, 137, 137, 255);
+    height: fit-content;
+    border-bottom: none;
+    background-image: linear-gradient(to right, grey 20%, rgba(255, 255, 255, 0) 0%);
+    background-position: 0 bottom;
+    background-repeat: repeat-x;
+    background-size: 11px 2px;
+    text-decoration: none;
 }
 
-.privf, .privs { justify-self: center; }
+.privs {
+    color: blue;
+}
+
 
 form button {
     width: 200px;
@@ -654,4 +675,105 @@ form button {
     background-color: rgba(36, 118, 254, 255);
     color: white;
     font-size: 17px;
+    border: none;
 }
+
+footer {
+    margin: 0 200px;
+}
+
+.footertop {
+    margin-bottom: 50px;
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    gap: 50px;
+}
+
+.ftop-left {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 20px;
+}
+
+.ftop-left img {
+    height: 45px;
+}
+
+.footer-links {
+    display: flex;
+    gap: 50px;
+}
+
+.company, .company-links, 
+.features, .featureslinks, 
+.documentations, .documentationlinks, 
+.resources, .resourceslinks {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+footer h3 {
+    font-size: 25px;
+    margin-bottom: 10px;
+}
+
+footer h4, footer a, footer i {
+    font-size: 17px;
+    color: rgba(109,124,139,255);
+    /* convert all text base colors to this */
+    text-decoration: none;
+    font-weight: initial;
+}
+
+.career-link {
+    text-decoration: none;
+    position: relative;
+}
+
+.hiring-text {
+    border: none;
+    background-color: rgba(46, 124, 254, 1);
+    color: white;
+    font-size: 9px;
+    display: inline-block;
+    height: auto;
+    width: auto;
+    padding: 4px 7px;
+    border-radius: 3px;
+    margin-left: 8px; 
+    line-height: 1;
+    position: relative;
+    bottom: 3px;
+}
+
+.footertop i {
+    font-size: 14px;;
+}
+
+.flex {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    height: 25px;
+}
+
+.footerbot {
+    text-align: center;
+}
+
+.bottop {
+    display: flex;
+    justify-content: space-between;
+}
+
+.botbot h4 {
+    margin: 0 175px;
+}
+
+
+
+
+/* BEFORE SUBMITTING MAKE ROOT VARIABLES AND ADJUST */
