--- a/code/styles.css
+++ b/code/styles.css
@@ -1,6 +1,35 @@
 :root {
     font-family: Arial, sans-serif;
-    --size-10px:.75rem;
+    --size-1rem: 1rem;\
+    --size-3px: 0.188rem;
+    --size-5px: 0.313rem;
+    --size-10px: .75rem;
+    --size-15px: 0.938rem;
+    --size-17px: 1.063rem;
+    --size-18px: 1.125rem;
+    --size-20px: 1.25rem;
+    --size-25px: 1.563rem;
+    --size-28px: 1.75rem;
+    --size-30px: 1.875rem;
+    --size-35px: 2.188rem;
+    --size-40px: 2.5rem;
+    --size-50px: 3.125rem;
+    --size-55px: 3.438rem;
+    --size-60px: 3.75rem;
+    --size-70px: 4.375rem;
+    --size-80px: 5rem;
+    --size-100px: 6.25rem;
+    --size-150px: 9.375rem;
+    --size-200px: 12.5rem;
+    --size-660px: 41.25rem;
+    --weight-regular: 400;
+    --weight-bold: 700;
+    --color-primary: #0c6bff;
+    --color-secondary: #07cc81;
+    --color-grey: #6d7c8b;
+    --color-dark: #202021;
+    --color-light: #f4f5f9;
+    --shadow-light: 0px 4px 7px 3px lightgrey;
 }
 
 body {
@@ -20,60 +49,60 @@ header {
 }
 
 .header-left img {
-    height: 50px
+    height: var(--size-50px);
 }
 
 nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px;
-    gap: 15px;
+    padding: var(--size-10px);
+    gap: var(--size-15px);
 }
 
 .nav-links {
     display: flex;
-    width: 420px;
+    width: 26.25rem;
     justify-content: space-evenly;
 }
 
 .nav-links a {
     text-decoration: none;
     color: grey;
-    font-size: 19px;
+    font-size: 1.188rem;
     margin: 0;
 }
 
 .button input {
     border: none;
-    border-radius: 30px;
-    height: 50px;
-    width: 114px;
+    border-radius: var(--size-30px);
+    height: var(--size-50px);
+    width: 7.125rem;
     background: #0c6bff;
     color: white;
-    margin-right: 15px;
+    margin-right: var(--size-15px);
 }
 
 .freedom-icons {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin: 40px 100px;
+    margin: var(--size-40px) var(--size-100px);
 }
 
 .freedom {
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: var(--size-20px);
 }
 
 .freedom {
-    max-width: 404px;
+    max-width: 25.25rem;
 }
 
 .freedom-text h2 {
-    max-width: 360px;
-    font-size: 47px;
+    max-width: 22.5rem;
+    font-size: 2.938rem;
     font-weight: normal;
     margin: 0;
 }
@@ -81,32 +110,32 @@ nav {
 .freedom-bottom {
     display: flex;
     align-items: center;
-    gap: 40px;
+    gap: var(--size-40px);
 }
 
 .freedom-bottom button {
     background-color: #0c6bff;
     color: white;
     border: none;
-    border-radius: 27px;
-    height: 55px;
-    width: 150px;
-    font-size: 13px;
+    border-radius: var(--size-40px);
+    height: var(--size-55px);
+    width: var(--size-150px);
+    font-size: 0.813rem;
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 5px;
+    gap: var(--size-5px);
 }
 
 .freedom-bottom button i {
-    font-size: 20px;
+    font-size: var(--size-20px);
 }
 
 .freedom-bottom a {
     text-decoration: none;
     color: #0c6bff;
     font-weight: bold;
-    font-size: 20px;
+    font-size: var(--size-20px);
 }
 
 .icongrid img {
@@ -117,7 +146,7 @@ nav {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(4, 1fr);
-    gap: 20px;
+    gap: var(--size-20px);
 }
 
 .large-icon, .small-icon { box-shadow: 0px 4px 7px 3px lightgrey; }
@@ -126,9 +155,9 @@ nav {
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 80px;
-    width: 80px;
-    border-radius: 55px;
+    height: var(--size-80px);
+    width: var(--size-80px);
+    border-radius: var(--size-55px);
     background-color: white;
 }
 
@@ -136,9 +165,9 @@ nav {
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 55px;
-    width: 55px;
-    border-radius: 28px;
+    height: var(--size-55px);
+    width: var(--size-55px);
+    border-radius: 1.75rem;
     background-color: white;
 }
 
@@ -161,7 +190,7 @@ nav {
     grid-column: 2/3;
     grid-row: 4/5;
     position: relative;
-    bottom: 15px;
+    bottom: var(--size-15px);
 }
 
 .icon5 {
@@ -180,22 +209,22 @@ nav {
 }
 
 .cards {
-    margin: 150px 25px;
+    margin: var(--size-150px) var(--size-25px);
 }
 
 .cards-container {
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 35px;
+    gap: 2.188rem;
 }
 
 .card {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    height: 400px;
-    width: 300px;
+    height: 25rem;
+    width: 18.75rem;
     box-shadow: 0px 10px 15px 10px lightgrey;
 }
 
@@ -204,31 +233,31 @@ nav {
 }
 
 .cards-top-text h2 {
-    font-size: 40px;
+    font-size: var(--size-40px);
 }
 
 .cards-top-text p {
-    font-size: 28px;
-    margin-bottom: 70px;
+    font-size: var(--size-28px);
+    margin-bottom: 4.375rem;
     color: grey;
 }
 
-.card h3, .card p, .card a { margin: 0 15px;}
+.card h3, .card p, .card a { margin: 0 var(--size-15px);}
 
 .card img {
-    margin: 0 15px;
-    height: 70px;
-    width: 70px;
+    margin: 0 var(--size-15px);
+    height: var(--size-70px);
+    width: var(--size-70px);
 }
 
-.card h3 { font-size: 28px;}
+.card h3 { font-size: var(--size-28px);}
 
-.card p, .card a { font-size: 23px;}
+.card p, .card a { font-size: 1.438rem;}
 
 .card p { 
     color: grey;
-    line-height: 30px;
-    width: 223px;
+    line-height: var(--size-30px);
+    width: 13.938rem;
 }
 
 .card a {
@@ -244,50 +273,50 @@ nav {
 .premium-head span {
     background-color: #07cc81;
     text-align: center;
-    border-radius: 36px;
-    height: 28px;
-    width: 75px;
+    border-radius: 2.25rem;
+    height: var(--size-28px);
+    width: 4.688rem;
     color: white;
 }
 
 .spantxt {
-    font-size: 18px;
+    font-size: var(--size-18px);
     position: relative;
-    top: 4px;
+    top: 0.25rem;
 }
 
 .front {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    margin: 150px 25px;
+    margin: var(--size-150px) var(--size-25px);
 }
 
 .front-left {
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: var(--size-20px);
     position: relative;
-    bottom: 40px;
+    bottom: var(--size-40px);
 }
 
 .front-left h2 {
     margin: 0;
-    font-size: 37px;
+    font-size: 2.313rem;
 }
 
 .front-left button {
     background-color: #0c6bff;
     color: white;
     border: none;
-    border-radius: 50px;
-    height: 65px;
-    width: 200px;
-    font-size: 20px;
+    border-radius: var(--size-50px);
+    height: var(--size-60px);
+    width: var(--size-200px);
+    font-size: var(--size-20px);
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 5px;
+    gap: 0.313rem;
 }
 
 .front img {
@@ -295,7 +324,7 @@ nav {
 }
 
 .why-front {
-    margin-bottom: 100px;
+    margin-bottom: var(--size-100px);
 }
 
 .why-text {
@@ -303,39 +332,39 @@ nav {
     flex-direction: column;
     align-items: center;
     text-align: center;
-    margin-bottom: 100px;
+    margin-bottom: var(--size-100px);
 }
 
-.why-text h2 { font-size: 30px; }
+.why-text h2 { font-size: var(--size-30px); }
 .why-text p {
     color: grey;
-    font-size: 20px;
-    width: 655px;
+    font-size: var(--size-20px);
+    width: 40.938rem;
 }
 
 .display {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	gap: 20px;
-    margin-bottom: 100px;
+	gap: var(--size-20px);
+    margin-bottom: var(--size-100px);
 }
 
 .circle {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	font-size: 30px;
+	font-size: var(--size-30px);
     color: rgba(0,102,255,255);
-	height: 60px;
-	min-width: 60px;
+	height: var(--size-60px);
+	min-width: var(--size-60px);
 	border-radius: 60%;
 	background-color: rgba(236,242,255,255);
 }
 
 .line {
-	height: 2px;
-	width: 200px;
+	height: 0.125rem;
+	width: var(--size-200px);
 	background-color: rgba(244,245,249,255);
 }
 
@@ -343,11 +372,11 @@ nav {
     max-width: fill-available;
     max-width: -webkit-fill-available;
     max-width: -moz-available;
-    margin: 0 40px;
+    margin: 0 var(--size-40px);
 }
 
 .play-icon i {
-    font-size: 25px;
+    font-size: var(--size-25px);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -355,8 +384,8 @@ nav {
     z-index: 5;
     left: 50vw;
     top: 22vw;
-    height: 70px;
-    width: 70px;
+    height: var(--size-70px);
+    width: var(--size-70px);
     border-radius: 60%;
     background-color: white;
     box-shadow: 0px 0px 9px 2px grey;
@@ -364,79 +393,79 @@ nav {
 
 .play-icon i::before {
     position: relative;
-    left: 3px;
+    left: var(--size-3px);
 }
 
 .portrait {
-    max-width: 400px;
+    max-width: 25rem;
 }
 
 .portrait img:first-of-type {
     max-width: inherit;
-    margin-left: 43px;
+    margin-left: 2.688rem;
 }
 
 .hubspot {
     display: flex;
-    margin: 0 40px;
+    margin: 0 var(--size-40px);
     justify-content: space-between;
-    gap: 87px;
-    height: 660px;
+    gap: 5.438rem;
+    height: var(--size-660px);
 }
 
 .portrait {
-    max-width: 480px;
-    height: 660px;
+    max-width: 30rem;
+    height: var(--size-660px);
 }
 
 .portrait img:first-of-type {
     max-width: inherit;
-    margin-left: 70px;
+    margin-left: 2.688rem;
 }
 
 .portrait img:nth-of-type(2) {
-    width: 300px;
-    height: 495px;
+    width: 18.75rem;
+    height: 30.938rem;
     position: relative;
-    bottom: 445px;
+    bottom: 27.813rem;
     z-index: -1;
 }
 
 .hubtext {
     width: 51%;
     position: relative;
-    top: 100px;
+    top: var(--size-100px);
 }
 
 .hubtext img {
-    width: 150px;
+    width: var(--size-150px);
 }
 
 .hubtext p {
-    font-size: 35px;
-    margin-bottom: 80px;
+    font-size: 2.188rem;
+    margin-bottom: var(--size-80px);
 }
 
 .hubtext h3 {
-    font-size: 30px;
-    margin-bottom: 10px;
+    font-size: var(--size-30px);
+    margin-bottom: var(--size-10px);
 }
 
 .hubtext h4 {
-    font-size: 20px;
+    font-size: var(--size-20px);
     color: grey;
     margin: 0;
 }
 
 .brands {
-    margin-bottom: 100px;
+    margin-bottom: var(--size-100px);
 }
 
 .brands h2 {
-    font-size: 28px;
+    font-size: var(--size-28px);
     text-align: center;
     color: grey;
-    margin-bottom: 70px;
+    margin-bottom: var(--size-70px);
 }
 
 .brandnames {
@@ -450,20 +479,20 @@ nav {
 }
 
 .pricing {
-    margin: 0 40px;
+    margin: 0 var(--size-40px);
 }
 
 .pricetext {
     text-align: center;
-    margin-bottom: 100px;
+    margin-bottom: var(--size-100px);
 }
 
 .pricetext h2 {
-    font-size: 40px;
+    font-size: var(--size-40px);
 }
 
 .pricetext p {
-    font-size: 25px;
+    font-size: var(--size-25px);
     color: grey;
 }
 
@@ -473,21 +502,21 @@ nav {
 }
 
 .cardcontainer {
-    margin: 80px;
+    margin: var(--size-80px);
 }
 
 .cardTop {
-    margin-bottom: 60px;
+    margin-bottom: var(--size-60px);
 }
 
 .cardTop h2 {
-    font-size: 80px;
+    font-size: var(--size-80px);
     font-weight: initial;
-    margin-bottom: 40px;
+    margin-bottom: var(--size-40px);
 }
 
 .cardTop h2 span {
-    font-size: 40px;
+    font-size: var(--size-40px);
 }
 
 .cardTop p {
@@ -500,10 +529,10 @@ nav {
     background-color: #0c6bff;
     color: white;
     border: none;
-    border-radius: 50px;
+    border-radius: var(--size-50px);
     height: 65px;
     width: 180px;
-    font-size: 18px;
+    font-size: var(--size-18px);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -511,7 +540,7 @@ nav {
 }
 
 .priceButton p {
-    font-size: 20px;
+    font-size: var(--size-20px);
     color: grey;
 }
 
@@ -519,16 +548,16 @@ nav {
     display: grid;
     grid-template-columns: repeat(2, 365px);
     grid-template-rows: repeat(2, 1fr);
-    column-gap: 100px;
-    row-gap: 50px;
+    column-gap: var(--size-100px);
+    row-gap: var(--size-50px);
 }
 
 .pricegrid img {
-    height: 70px;
+    height: var(--size-70px);
 }
 
 .griditem h2 {
-    font-size: 30px;
+    font-size: var(--size-30px);
 }
 
 .griditem p {
@@ -537,46 +566,46 @@ nav {
 }
 
 .people img {
-    width: 70px;
-    height: 70px;
+    width: var(--size-70px);
+    height: var(--size-70px);
 }
 
 .hf {
     background-color: rgba(32, 51, 91, 255);
     display: flex;
-    margin: 0 40px;
+    margin: 0 var(--size-40px);
     justify-content: center;
     align-items: center;
-    margin-bottom: 100px;
+    margin-bottom: var(--size-100px);
 }
 
 .hireus {
-    margin: 60px;
+    margin: var(--size-60px);
 }
 
 .toptext  h2 {
 color: white;
-font-size: 40px;
+font-size: var(--size-40px);
 margin: 0;
 }
 
 .toptext p {
-    margin-bottom: 30px;
+    margin-bottom: var(--size-30px);
     color: #54657c;
-    font-size: 25px;
+    font-size: var(--size-25px);
 }
 
 .quote {
     font-size: 23px;
     color: white;
     width: 469px;
-    margin-bottom: 70px;
+    margin-bottom: var(--size-70px);
 }
 
 /* FIX HR WIDTH */
 
 .title h3 {
-    font-size: 28px;
+    font-size: var(--size-28px);
     color: white;
     margin-bottom: 0;
 }
@@ -594,27 +623,27 @@ margin: 0;
 }
 
 .people img:first-of-type {
-    border-radius: 35px;
+    border-radius: var(--size-35px);
 }
 .people img:nth-of-type(2) {
-    margin: 0 50px;
-    border-radius: 35px;
+    margin: 0 var(--size-50px);
+    border-radius: var(--size-35px);
 }
 .people img:nth-of-type(3) {
     border-radius: 45px;
-    height: 80px;
-    width: 80px;
+    height: var(--size-80px);
+    width: var(--size-80px);
 }
 
 form {
     display: grid;
     grid-template-columns: repeat(2, 300px);
-    grid-template-rows: repeat(8, 70px);
-    gap: 30px;
+    grid-template-rows: repeat(8, var(--size-70px));
+    gap: var(--size-30px);
     background-color: white;
-    border-radius: 20px;
-    padding: 30px;
-    margin: 60px;
+    border-radius: var(--size-20px);
+    padding: var(--size-30px);
+    margin: var(--size-60px);
 }
 
 form h3 {
@@ -623,7 +652,7 @@ form h3 {
 }
 
 form input, select, textarea {
-    border-radius: 5px;
+    border-radius: var(--size-5px);
 }
 
 form textarea {
@@ -638,20 +667,20 @@ form textarea {
 
 input#myCheckbox {
     transform: scale(3);
-    margin-left: 17px;
+    margin-left: var(--size-17px);
     color: rgba(137, 137, 137, 255);
 }
 
 .checkbox h4 {
     color: grey;
     font-size: 19px;
-    padding-left: 40px;
-    padding-right: 60px;
+    padding-left: var(--size-40px);
+    padding-right: var(--size-60px);
 }
 
 .privf, .privs { 
     justify-self: center; 
-    font-size: 20px;
+    font-size: var(--size-20px);
     color: rgba(137, 137, 137, 255);
     height: fit-content;
     border-bottom: none;
@@ -668,42 +697,42 @@ input#myCheckbox {
 
 
 form button {
-    width: 200px;
+    width: var(--size-200px);
     grid-column: 1 / span 2;
     justify-self: center;
-    border-radius: 35px;
+    border-radius: var(--size-35px);
     background-color: rgba(36, 118, 254, 255);
     color: white;
-    font-size: 17px;
+    font-size: var(--size-17px);
     border: none;
 }
 
 footer {
-    margin: 0 200px;
+    margin: 0 var(--size-200px);
 }
 
 .footertop {
-    margin-bottom: 50px;
+    margin-bottom: var(--size-50px);
     display: flex;
     align-items: flex-start;
     justify-content: center;
-    gap: 50px;
+    gap: var(--size-50px);
 }
 
 .ftop-left {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    gap: 20px;
+    gap: var(--size-20px);
 }
 
 .ftop-left img {
-    height: 45px;
+    height: 2.813rem;
 }
 
 .footer-links {
     display: flex;
-    gap: 50px;
+    gap: var(--size-50px);
 }
 
 .company, .company-links, 
@@ -712,16 +741,16 @@ footer {
 .resources, .resourceslinks {
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: var(--size-20px);
 }
 
 footer h3 {
-    font-size: 25px;
-    margin-bottom: 10px;
+    font-size: var(--size-25px);
+    margin-bottom: 0;
 }
 
 footer h4, footer a, footer i {
-    font-size: 17px;
+    font-size: var(--size-17px);
     color: rgba(109,124,139,255);
     /* convert all text base colors to this */
     text-decoration: none;
@@ -737,31 +766,39 @@ footer h4, footer a, footer i {
     border: none;
     background-color: rgba(46, 124, 254, 1);
     color: white;
-    font-size: 9px;
+    font-size: 0.563rem;
     display: inline-block;
     height: auto;
     width: auto;
     padding: 4px 7px;
-    border-radius: 3px;
-    margin-left: 8px; 
+    border-radius: var(--size-3px);
+    margin-left: 0.5rem; 
     line-height: 1;
     position: relative;
-    bottom: 3px;
+    bottom: var(--size-3px);
 }
 
 .footertop i {
-    font-size: 14px;;
+    font-size: 0.875rem;
 }
 
 .flex {
     display: flex;
     align-items: center;
-    gap: 5px;
-    height: 25px;
+    gap: var(--size-5px);
+    height: var(--size-25px);
 }
 
 .footerbot {
     text-align: center;
+}
+
+.footerbot-sociallinks select {
+    background-color: rgba(239, 244, 254, 255);
+    border: none;
+    height: var(--size-35px);
+    width: 8.125rem;
+    font-size: var(--size-15px);
 }
 
 .bottop {
@@ -770,10 +807,15 @@ footer h4, footer a, footer i {
 }
 
 .botbot h4 {
-    margin: 0 175px;
+    margin: 0 10.938rem;
 }
 
 
+.footerphone h4, 
+.featureslinks a:nth-of-type(2),
+.bottop h4 span {
+    color: blue;
+}
 
 
 /* BEFORE SUBMITTING MAKE ROOT VARIABLES AND ADJUST */
