--- a/code/media-querie.css
+++ b/code/media-querie.css
@@ -1,4 +1,83 @@
 
 @media screen and (max-width: 1023px) {
-    
+    [aria-controls="navbarDropdown"] {
+        display: block;
+    }
+
+    [aria-expanded="false"] ~ .nav-full {
+        display: none;
+    }
+
+    [aria-expanded="true"] ~ .nav-full {
+        display: block;
+    }
+
+    .freedom-icons {
+        display: flex;
+        flex-direction: column;
+        gap: var(--size-100px);
+    }
+/* fine tune icons */
+    .icongrid {
+        display: grid;
+        grid-template-columns: repeat(5, 1fr);
+        grid-template-rows: repeat(4, 1fr);
+        gap: var(--size-30px);
+    }
+
+    .icon1 {
+        grid-column: 5 / 6;
+        grid-row: 1 / 2;
+        position: relative;
+        left: var(--size-20px);
+    }
+
+    .icon2 {
+        grid-column: 3 / 4;
+        grid-row: 1 / 2;
+    }
+
+    .icon3 {
+        grid-column: 5 / 6;
+        grid-row: 3 / 4;
+    }
+
+    .icon4 {
+        grid-column: 2 / 3;
+        grid-row: 3 / 4;
+        position: relative;
+        bottom: var(--size-20px);
+    }
+
+    .icon5 {
+        grid-column: 1 / 2;
+        grid-row: 1 / 2;
+    }
+
+    .icon6 {
+        grid-column: 1 / 2;
+        grid-row: 2 / 3;
+    }
+
+    .icon7 {
+        grid-column: 4 / 5;
+        grid-row: 2 / 3;
+    }
+
+    .card {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        height: 17rem;
+        width: 400px;
+        box-shadow: 0px 10px 15px 7px lightgrey;
+    }
+
+    .card p {
+        color: grey;
+        line-height: var(--size-25px);
+        width: 18.938rem;
+        font-size: var(--size-15px);
+    }
+
 }
