--- a/code/media-querie.css
+++ b/code/media-querie.css
@@ -1,5 +1,5 @@
 
-@media screen and (max-width: 1023px) {
+@media screen and (max-width: 1024px) {
     [aria-controls="navbarDropdown"] {
         display: block;
     }
@@ -10,7 +10,20 @@
 
     [aria-expanded="true"] ~ .nav-full {
         display: block;
+        position: absolute;
+        right: 0;
+        top: var(--size-50);
+        background-image: linear-gradient(to right, transparent, rgba(255, 255, 255, 0.7));
+        width: 100%;
+        text-align: right;
+        box-shadow: 0px 0px 20px rgba(52, 49, 75, 0.1);
     }
+
+    [aria-expanded="true"] ~ .nav-full {
+        margin-right: var(--size-20);
+        color: var(--font-color-dark);
+    }
+
 
     .freedom-icons {
         display: flex;
@@ -21,7 +34,7 @@
     .icongrid {
         display: grid;
         grid-template-columns: repeat(5, 1fr);
-        grid-template-rows: repeat(4, 1fr);
+        grid-template-rows: repeat(3, 1fr);
         gap: var(--size-30px);
     }
 
@@ -81,11 +94,9 @@
     }
 
     .front {
-        display: flex;
         flex-direction: column;
         justify-content: space-around;
         align-items: center;
-        margin: var(--size-100px) var(--size-40px);
     }
 
     .front-left {
@@ -114,7 +125,16 @@
         align-items: center;
         margin: var(--size-100px) var(--size-40px);
         justify-content: space-between;
-        gap: 0;
+        gap: var(--size-150px);
+    }
+
+    .portrait { 
+        height: auto;
+    }
+
+    .portrait img:nth-of-type(2) {
+        top: 110px;
+        right: 540px;
     }
 
     .hubtext {
@@ -163,6 +183,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        padding-bottom: 20px;
     }
 
     .pricegrid { margin: 25px; }
@@ -175,7 +196,7 @@
     .hireus {
         display: flex;
         gap: 60px;
-        margin: var(--size-50px) var(--size-100px);
+        margin: var(--size-50px) 0;
     }
 
     form {
@@ -183,4 +204,242 @@
         width: auto;
     }
 
+}
+
+@media screen and (max-width: 768px) {
+    .header-left img {
+        height: var(--size-40px);
+        margin: var(--size-20px);
+    }
+
+    .freedom-icons {
+        gap: var(--size-50px);
+        margin: var(--size-100px) var(--size-20px);
+    }
+
+    .freedom-text {
+        text-align: center;
+    }
+
+    .freedom-text h2 {
+        font-size: var(--size-28px);
+    }
+
+    .freedom-bottom a {
+        font-size: var(--size-15px);
+    }
+
+    .freedom-bottom {
+        justify-content: center;
+        gap: 35px;
+    }
+
+    .freedom-bottom button {
+        height: 45px;
+        width: 120px;
+    }
+
+    .icongrid {
+        grid-template-columns: repeat(4, 1fr);
+        gap: var(--size-17px);
+    }
+
+    .large-icon {
+        height: var(--size-70px);
+        width: var(--size-70px);
+    }
+
+    .small-icon {
+        height: var(--size-55px);
+        width: var(--size-55px);
+    }
+
+    .small-icon img { height: 70%; }
+
+    .icon1 { 
+        grid-column: 4 / 5;
+        position: static;
+    }
+
+    .icon2 { 
+        grid-column: 2 / 3;
+        position: relative;
+        left: var(--size-20px);
+    }
+
+    .icon3 {
+        grid-column: 4 / 5;
+        position: relative;
+        right: var(--size-28px);
+    }
+
+    .icon4 { grid-column: 2 / 3; }
+
+    .icon5 { grid-column: 1 / 2; }
+
+    .icon6 { grid-column: 1 / 2; }
+
+    .icon7 { grid-column: 3 / 4; }
+
+    .front-left {
+        font-size: var(--size-28px);
+        width: 280px;
+        text-align: center;
+    }
+
+    .front-left h2 { width: auto; }
+
+    .front img { width: 100%; }
+
+    .why-text p { width: auto; }
+
+    .display {
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 20px;
+    }
+
+    .display .line { display: none; }
+
+    .play-icon img {
+        margin: 0;
+    }
+
+    .hubspot {
+        gap: 0;
+    }
+
+    .portrait img:first-of-type {
+        width: 100%;
+        height: 100%;
+        margin-left: 15px;
+    }
+
+    .portrait img:nth-of-type(2) {
+        width: 60%;
+        top: -55px;
+        right: 320px;
+    }
+
+    .hubtext { width: auto; }
+
+    .brandnames {
+        flex-direction: column;
+        gap: var(--size-20px);
+        align-items: center;
+    }
+
+    .hireus {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .tablet-left {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
+    .toptext { width: 100%; }
+
+    .toptext p { font-size: var(--size-15px); }
+
+    .quote { width: 330px; }
+
+    .title { text-align: center; }
+
+    .maincard {
+        height: 100%;
+        width: 100%;
+    }
+
+    .cardTop p { font-size: var(--size-17px); }
+
+    .priceButton p { font-size: var(--size-10px); }
+
+    .pricegrid { 
+        grid-template-columns: repeat(1, 1fr);
+        margin: 0;
+        row-gap: var(--size-30px);
+    }
+
+    .griditem img { height: var(--size-50px); }
+
+    .griditem h2 { font-size: var(--size-18px); }
+
+    .griditem p {
+        line-height: var(--size-25px);
+        font-size: 14px;
+    }
+
+    form {
+        margin: 0 var(--size-10px) var(--size-50px);
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: auto;
+        padding: var(--size-20px);
+        row-gap: var(--size-10px);
+    }
+
+    form h3 { grid-column: 1; }
+
+    form input { 
+        grid-column: 1; 
+        height: 50px;
+    }
+
+    form input:nth-of-type(4) {
+        grid-row: 5 / 6;
+    }
+
+    .privf {
+        grid-row: 10 /11;
+        justify-self: left;
+        margin-bottom: var(--size-20px);
+    }
+
+    form .checkbox { grid-column: 1; }
+
+    form select { 
+        grid-column: 1; 
+        height: 50px;
+    }
+
+    form textarea { 
+        grid-column: 1;
+        grid-row: 8 / 9; 
+    }
+
+    .privs { display: none; }
+
+    form button { 
+        grid-column: 1; 
+        grid-row: 11 / 12;
+        height: var(--size-50px);
+    }
+
+    footer {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .footertop { flex-direction: column; }
+
+    .ftop-left { align-items: center; }
+
+    .footer-links {
+        justify-content: center;
+        text-align: center;
+    }
+    
+    .footer-links h3 { font-size: 15px;}
+
+    .company, .company-links, 
+    .features, .featureslinks, 
+    .documentations, .documentationlinks, 
+    .resources, .resourceslinks {
+        align-items: center;
+    }
 }
