--- a/code/media-querie.css
+++ b/code/media-querie.css
@@ -2,6 +2,13 @@
 @media screen and (max-width: 1024px) {
     [aria-controls="navbarDropdown"] {
         display: block;
+        position: absolute;
+        right: var(--size-30px);
+        top: var(--size-25px);
+        outline: none;
+        background-color: transparent;
+        border:1px solid transparent;
+        font-size: var(--size-20px);
     }
 
     [aria-expanded="false"] ~ .nav-full {
@@ -9,21 +16,33 @@
     }
 
     [aria-expanded="true"] ~ .nav-full {
-        display: block;
-        position: absolute;
-        right: 0;
-        top: var(--size-50);
-        background-image: linear-gradient(to right, transparent, rgba(255, 255, 255, 0.7));
+        display: flex;
+        flex-direction: column;
+        gap: 25px;
         width: 100%;
-        text-align: right;
-        box-shadow: 0px 0px 20px rgba(52, 49, 75, 0.1);
+        text-align: center;
+        height: 100vh;
+        background-color: white;
+        border-top: 2px solid lightgrey;
+        padding-top: 50px;
     }
 
-    [aria-expanded="true"] ~ .nav-full {
-        margin-right: var(--size-20);
-        color: var(--font-color-dark);
+    [aria-expanded="true"] ~ header {
+        background-color: white;
     }
 
+    header { flex-direction: column; }
+
+    .header-left { 
+        align-self: flex-start;
+        margin-top: 10px;
+     }
+
+    nav {
+        width: 100%;
+    }
+
+    .nav-links { gap: 25px; }
 
     .freedom-icons {
         display: flex;
@@ -97,6 +116,7 @@
         flex-direction: column;
         justify-content: space-around;
         align-items: center;
+        padding-top: 60px;
     }
 
     .front-left {
@@ -118,6 +138,8 @@
     .front img {
         width: auto;
     }
+
+
 
     .hubspot {
         display: flex;
@@ -291,7 +313,7 @@
 
     .front img { width: 100%; }
 
-    .why-text p { width: auto; }
+    .why-text p { width: 350px; }
 
     .display {
         flex-direction: column;
@@ -300,6 +322,13 @@
     }
 
     .display .line { display: none; }
+
+    .circle-text { 
+        flex-direction: row; 
+        gap: 50px;
+    }
+
+    .circle-text h2 { text-align: left; }
 
     .play-icon img {
         margin: 0;
@@ -442,4 +471,6 @@
     .resources, .resourceslinks {
         align-items: center;
     }
+
+    .bottop { flex-direction: column;}
 }
