--- a/code/styles.css
+++ b/code/styles.css
@@ -309,6 +309,7 @@ nav {
     justify-content: space-around;
     align-items: center;
     margin: var(--size-100px) var(--size-15px);
+    background-color: rgba(249,250,254,255);
 }
 
 .front-left {
@@ -376,10 +377,23 @@ nav {
 	align-items: center;
 	font-size: var(--size-30px);
     color: rgba(0,102,255,255);
-	height: var(--size-60px);
-	min-width: var(--size-60px);
+	height: var(--size-20px);
+	width: var(--size-20px);
 	border-radius: 60%;
 	background-color: rgba(236,242,255,255);
+    padding: 27px;
+}
+
+.circle-text {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.circle-text h2 {
+    font-size: var(--size-15px);
+    width: 170px;
+    text-align: center;
 }
 
 .line {
@@ -454,7 +468,7 @@ nav {
     position: relative;
     right: 570px;
     top: 110px;
-    z-index: -1;
+    z-index: -1
 }
 
 .hubtext {
